--- a/platforms/ios/GaleriaAppConvenios/GaleriaAppConvenios-Info.plist
+++ b/platforms/ios/GaleriaAppConvenios/GaleriaAppConvenios-Info.plist
@@ -5,7 +5,7 @@
     <key>CFBundleDevelopmentRegion</key>
     <string>English</string>
     <key>CFBundleDisplayName</key>
-    <string>GaleriaInmobiliaria</string>
+    <string>GaleriaInmobiliaria-ArriendosEnBucaramanga</string>
     <key>CFBundleExecutable</key>
     <string>${EXECUTABLE_NAME}</string>
     <key>CFBundleIcons</key>
@@ -13,7 +13,7 @@
     <key>CFBundleIcons~ipad</key>
     <dict/>
     <key>CFBundleIdentifier</key>
-    <string>com.galeriainmobiliaria</string>
+    <string>com.galeriainmobiliaria.arriendosenbucaramanga</string>
     <key>CFBundleInfoDictionaryVersion</key>
     <string>6.0</string>
     <key>CFBundleName</key>
@@ -21,11 +21,11 @@
     <key>CFBundlePackageType</key>
     <string>APPL</string>
     <key>CFBundleShortVersionString</key>
-    <string>1.0.32</string>
+    <string>1.0.35</string>
     <key>CFBundleSignature</key>
     <string>????</string>
     <key>CFBundleVersion</key>
-    <string>1.0.32</string>
+    <string>1.0.35</string>
     <key>LSRequiresIPhoneOS</key>
     <true/>
     <key>NSMainNibFile</key>
